k8s/client-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: client-cluster-ip-service
spec: 
  type: ClusterIP 
  selector:
    component: web
  ports: #same nomenclature of nodePort , only port and targetPort
    - port: 3000 #service clusterIP port
      targetPort: 3000 #container port, does not have to be same
