k8s/server-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata: 
  name: server-cluster-ip-service
spec: 
  type: ClusterIP 
  selector:
    component: server #says what pods service should provide access to
  ports: #same nomenclature of nodePort , only port and targetPort
    - port: 5000 #server index.js listens to port 5000
      targetPort: 5000 #container port, does not have to be same
